--- a/statics/css/weblog/palette.less
+++ b/statics/css/weblog/palette.less
@@ -13,7 +13,7 @@
 @blog-code-text: @blog-text; // code blocks text color
 @blog-code-border: #000; // code blocks border
 
-@blog-input-border: #CCC;
+@blog-input-border: #797979;
 //@blog-tag-bg: .degrade(#797979, #969696, #797979);
 @blog-tag-bg: #414141;
 @blog-tag-border: #222;
