few optimisations in post form.

--- a/statics/partials/weblog/weblog_post_form.html
+++ b/statics/partials/weblog/weblog_post_form.html
@@ -59,7 +59,7 @@
         <!-- put buttons out of form, else on enter key press, browser trigger first one, which is cancel… -->
         <div class="buttons-wrapper">
             <button ng-click="cancel()">Cancel</button>
-            <button type="submit" form="post_form">Create</button>
+            <button type="submit" form="post_form">Save</button>
         </div><!-- buttons wrapper -->
     </footer>
 </div>
