--- a/statics/css/weblog/palette.less
+++ b/statics/css/weblog/palette.less
@@ -19,3 +19,5 @@
 @blog-tag-border: #222;
 @blog-tag-color: #FFF;
 @blog-tag-color-hover: #000;
+@blog-main-thumb-border: #797979;
+@blog-main-thumb-border-hover: #222;
