--- a/statics/partials/weblog/weblog_list.html
+++ b/statics/partials/weblog/weblog_list.html
@@ -5,11 +5,14 @@
     ng-repeat="post in posts">
     <header>
     <ng-include src="'/assets/partials/weblog/weblog_time.html'"></ng-include>
-    <h1><a href="/weblog/{{ post.slug }}/">{{ post.title }}</a></h1>
+    <h1><a ng-href="/weblog/{{ post.slug }}/">{{ post.title }}</a></h1>
     </header>
+    <div class="thumb-wrapper" ng-if="post.pictures">
+        <a ng-href="/weblog/{{ post.slug }}/"><img ng-src="/media/images/previews/width-600/{{ post.pictures[0].previews_path }}" /></a>
+    </div>
     <div class="content" ng-bind-html="post.abstract"></div>
     <footer>
-        <p><a href="/weblog/{{ post.slug }}/">Read post</a></p>
+        <p><a ng-href="/weblog/{{ post.slug }}/">Read post</a></p>
     </footer>
 </article>
 <nav id="pagination">
