add lightbox, few animations and css for preview display on weblog.

--- a/statics/css/common/layout.less
+++ b/statics/css/common/layout.less
@@ -4,7 +4,7 @@ body {
     font-size: 100%;
     line-height: 1.5em;
     font-family: @sans;
-    &.modal_show {
+    &.blocked {
         overflow: hidden;
     }
 }
