--- a/statics/css/controller.less
+++ b/statics/css/controller.less
@@ -63,6 +63,9 @@
 // common forms
 @import '@{base-css}common/forms.less';
 
+// common lightbox
+@import '@{base-css}common/lightbox.less';
+
 
 
 /* Librairy */
