--- a/statics/partials/weblog/weblog_list.html
+++ b/statics/partials/weblog/weblog_list.html
@@ -8,7 +8,7 @@
     <h1><a ng-href="/weblog/{{ post.slug }}/">{{ post.title }}</a></h1>
     </header>
     <div class="thumb-wrapper" ng-if="post.pictures">
-        <a ng-href="/weblog/{{ post.slug }}/"><img ng-src="/media/images/previews/width-600/{{ post.pictures[0].previews_path }}" /></a>
+        <a ng-href="/weblog/{{ post.slug }}/lightbox/{{ post.pictures[0].pk }}/"><img ng-src="/media/images/previews/width-750/{{ post.pictures[0].previews_path }}" /></a>
     </div>
     <div class="content" ng-bind-html="post.abstract"></div>
     <footer>
