--- a/statics/css/weblog/layout.less
+++ b/statics/css/weblog/layout.less
@@ -144,26 +144,39 @@ body#weblog {
             }
         }
         img {
-            margin: 5px auto;
+            box-sizing: border-box;
+            max-width: 100%;
+            margin: 20px auto 10px;
             display: block;
-            border: 1px solid @blog-main-thumb-border;
+            //border: 1px solid @blog-main-thumb-border;
             &:hover {
-                border: 1px solid @blog-main-thumb-border-hover;
-                box-shadow: 0 0 8px #797979;
+                //border: 1px solid @blog-main-thumb-border-hover;
+                box-shadow: 0 0 8px #000;
+            }
+            &.square {
+                display: inline-block;
+                margin: 0 10px 10px 0;
+            }
+            &.fourth {
+                margin: 0 0 10px 0;
             }
         }
         .thumb-wrapper {
             margin: 10px 0;
             border-top: 1px solid @blog-hr;
             border-bottom: 1px solid @blog-hr;
-            padding : 5px 0;
+            padding-bottom: 10px;
+        }
+        .all-thumb-wrapper {
+            font-size: 0;
+            line-height: 0;
         }
         #tags {
             margin-top: 4em;
             margin-bottom: 1.125em;
             text-align: center; 
             li {
-                display: inline-block;
+                display: inline;
                 &:after {
                     display: inline-block;
                     content: "\2022";
