--- a/statics/css/common/lightbox.less
+++ b/statics/css/common/lightbox.less
@@ -16,6 +16,10 @@ section#lb-main {
     right: 0;
     left: 0;
     z-index: 1000;
+    /*
+     * force scroll else center position change
+     * when changement from high picture to small one
+     */
     overflow-y: scroll;
     text-align: center;
     padding: 40px;
