--- a/statics/partials/lightbox/lightbox.html
+++ b/statics/partials/lightbox/lightbox.html
@@ -1,13 +1,13 @@
-<div id="lb-overlay" class="fade-in-out" ng-show="lb.show" ng-class="{ng-hide: ! lb.show}"> {{ lb.show }}</div>
+<div id="lb-overlay" class="fade-in-out" ng-show="lb.show"></div>
 
 <section id="lb-main" ng-show="lb.show" ng-click="lb.close()" class="fade-in-out">
     <figure>
-        <div class="lb-buttons-wrapper">
+        <div class="lb-buttons-wrapper" ng-click="$event.stopPropagation()">
             <img ng-src="/media/images/previews/large/{{ lb.pict.previews_path }}"
                  alt="{{ lb.pict.title }}"
-                 ph-visible-max-height="-75"/>
-            <button id="lb-prev" ng-click="lb.prev();$event.stopPropagation()"></button>
-            <button id="lb-next" ng-click="lb.next();$event.stopPropagation()"></button>
+                 ph-visible-max-height="-100"/>
+            <button ng-if="lb.prev_pict" id="lb-prev" ng-click="lb.prev()"></button>
+            <button ng-if="lb.next_pict"id="lb-next" ng-click="lb.next()"></button>
         </div>
         <figcaption>
             {{ lb.pict.title }}
