broken attempt to include fade in lightbox.

--- a/statics/css/common/lightbox.less
+++ b/statics/css/common/lightbox.less
@@ -25,8 +25,9 @@ section#lb-main {
     padding: 40px;
 
     figure {
-        position: relative;
-        display: inline-block;
+        position: absolute;
+        max-width: 100%;
+        display: block;
         div.lb-buttons-wrapper {
             position: relative;
             margin: 0 auto;
