upgrade lightbox to a "2 states" system with animations.

--- a/statics/css/common/lightbox.less
+++ b/statics/css/common/lightbox.less
@@ -9,7 +9,7 @@
     z-index: 999;
 }
 
-section#lb-main {
+section#lb-main-stage1, section#lb-main-stage2 {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -25,9 +25,8 @@ section#lb-main {
     padding: 40px;
 
     figure {
-        position: absolute;
-        max-width: 100%;
-        display: block;
+        position: relative;
+        display: inline-block;
         div.lb-buttons-wrapper {
             position: relative;
             margin: 0 auto;
