fix few display bugs.

--- a/statics/partials/librairy/librairy_base.html
+++ b/statics/partials/librairy/librairy_base.html
@@ -78,7 +78,7 @@
                     ng-show="showDirectorys"
                     ng-click="$event.stopPropagation()">
                     <li ng-repeat="item in phFolder.directorys" ng-include="'/assets/partials/librairy/librairy_recursive_directorys.html'"></li>
-                    <li ng-if="! phFolder.directorys"><a class="doc popup" href="">Aucun dossier</a></li>
+                    <li ng-if="phFolder.directorys.length == 0"><a class="doc popup" href="">Aucun dossier</a></li>
                 </ul><!-- submenu -->
                 </div><!-- submenu-inframe -->
                 </div><!-- submenu-frame -->
