--- a/statics/partials/weblog/weblog_base.html
+++ b/statics/partials/weblog/weblog_base.html
@@ -9,7 +9,7 @@
     </nav>
 </header>
 
-<section role="main" ui-view></section>
+<section role="main" ui-view autoscroll></section>
 
 <footer role="contentinfo">
     <p id="powered"><a target="_blank" href="http://phiroom.org">Powered by Phiroom</a> | <a 
