--- a/statics/css/common/layout.less
+++ b/statics/css/common/layout.less
@@ -9,9 +9,31 @@ body {
     }
 }
 
+// emphasis
+em {
+    font-style: italic;
+}
+
 // small caps
 .small-caps {
     font-variant: small-caps;
+}
+
+.no-style, .no-style:hover, .no-style:active, .no-style:focus {
+    outline: none;
+    border: none;
+    box-shadow: none;
+    font-size: 100%;
+    line-height: normal;
+    background: none;
+    max-width: none;
+    max-height: none;
+    width: auto;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    min-width: 0;
+    min-height: 0;
 }
 
 .accessibility {
