--- a/statics/partials/librairy/librairy_grid.html
+++ b/statics/partials/librairy/librairy_grid.html
@@ -14,7 +14,7 @@
 <article id="{{ pict.id }}"
          class="thumb"
          ng-class="{selected: pict.selected, active: pict.active}"
-         ng-repeat="pict in picts | filter:query">
+         ng-repeat="pict in picts | filter:query track by $index">
     <header>
         <div class="line1">
             <span class="float-right">{{ pict.name| limitTo : 20 : 0 }}</span>
@@ -24,9 +24,21 @@
             <span class="float-right">{{ pict.type }}</span>
             {{ pict.width }} x {{ pict.height }}
         </div>
+        <button 
+            class="thumb-menu no-style"
+            ng-click="show_menu[$index] = ! show_menu[$index]"
+        ><span class="accessibility">menu de l'onglet</span></button>
     </header>
     <!-- square container for image -->
     <div class="thumb-container">
+        <ul ng-show="show_menu[$index]" class="slide-up-down thumb-menu">
+            <li><a target="blank" ng-href="/media/images/previews/large/{{ pict.previews_path }}">Open large version</a></li>
+            <li><a target="blank" ng-href="/media/{{ pict.source_file }}">Open original</a></li>
+            <li><a target="blank" ng-href="/media/{{ pict.source_file }}">Open original</a></li>
+            <li ng-if="! type == 'server'"><a ui-sref="librairy.grid({source: 'folder', pk: pict.directory || '-'})">Open folder</a></li>
+            <li class="separator"></li>
+            <li ng-if="rmPictFrom"><a ng-click="rmPictFrom(pict.pk)" href="">Remove from {{ type }}</a></li>
+        </ul>
         <!-- image itself wrapper, for published icone to be at right place -->
         <div>
             <img class="thumbnail"
