improve librairy thumbs contextual.

--- a/statics/css/librairy/palette.less
+++ b/statics/css/librairy/palette.less
@@ -43,3 +43,7 @@
 @lib-uploader-preview-area-border: #222; // preview area border
 @lib-uploader-file-preview-bg: #383838; // previews img div background
 @lib-uploader-file-preview-border: #222; // priview img div border
+@lib-thumb-contextual-bg: #737373; // thumbs contextual menu background
+@lib-thumb-contextual-hover-bg: #666; // thumbs contextual menu items background hover
+@lib-thumb-contextual-text: #000; // thumbs contextual text color
+@lib-thumb-contextual-border: #444; // thumbs contextual border and separator
