--- a/statics/css/librairy/layout.less
+++ b/statics/css/librairy/layout.less
@@ -327,6 +327,7 @@ body#librairy {
                     height: 18px;
                     width: 25px;
                     bottom: 0px;
+                    cursor: pointer;
                     &:before {
                         top: 3px;
                         right: 0;
@@ -342,8 +343,8 @@ body#librairy {
                     border-radius: 0 0 4px 4px;
                     box-shadow: 0 0 2px #919191 inset;
                     box-sizing: border-box;
-                    background: #666;
-                    border: 1px solid #222;
+                    background: @lib-thumb-contextual-bg;
+                    border: 1px solid @lib-thumb-contextual-border;
                     border-top: none;
                     padding: 7px 0;
                     right: 8px;
@@ -360,15 +361,15 @@ body#librairy {
                         &.separator {
                             height: 1px;
                             margin: 6px 0;
-                            background-color: #222;
+                            background-color: @lib-thumb-contextual-border;
                         }
                     }
                     a {
                         text-indent: 18px;
                         display: block;
-                        color: #000;
+                        color: @lib-thumb-contextual-text;
                         &:hover, &:active {
-                            background: #5E5E5E;
+                            background: @lib-thumb-contextual-hover-bg;
                         }
                     }
                 }
