add justifyThumbs directive and some css for librairy.

--- a/statics/css/common/reset.less
+++ b/statics/css/common/reset.less
@@ -51,5 +51,7 @@ a, button {
     text-decoration: none;
     border: none;
     outline: none;
-
+}
+button::-moz-focus-inner {
+      border: 0;
 }
