improve picture deletion service, add css.

--- a/statics/css/common/layout.less
+++ b/statics/css/common/layout.less
@@ -19,6 +19,16 @@ em {
     font-variant: small-caps;
 }
 
+// text-centering
+.centered {
+    text-align: center;
+}
+
+// headings
+h1, h2, h3, h4, h5, h6 {
+    font-weight: bold;
+}
+
 .no-style, .no-style:hover, .no-style:active, .no-style:focus {
     outline: none;
     border: none;
