--- a/statics/css/librairy/layout.less
+++ b/statics/css/librairy/layout.less
@@ -557,5 +557,13 @@ body#librairy {
             border-bottom: 1px solid @lib-modal-inborder;
         }
     }
+
+    img.rounded-framed {
+        border: 1px solid @lib-modal-border;
+        box-shadow: 0 0 3px @lib-modal-border;
+        border-radius: 4px;
+        margin: 1em;
+    }
+
 } // body
 
